--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,54 +1,34 @@
-const fs = require("fs");
-const fetch = require("node-fetch");
+name: Update README
 
-const GITHUB_USERNAME = "Sov-ereign";
-const TOKEN = process.env.GITHUB_TOKEN;
+on:
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+  workflow_dispatch:     # Manual trigger
 
-const query = `
-{
-  user(login: "${GITHUB_Sov-ereign}") {
-    repositories(first: 5, orderBy: {field: CREATED_AT, direction: DESC}, privacy: PUBLIC) {
-      nodes {
-        name
-        description
-        url
-      }
-    }
-  }
-}
-`;
+jobs:
+  update-readme:
+    runs-on: ubuntu-latest
 
-async function fetchLatestRepos() {
-  const response = await fetch("https://api.github.com/graphql", {
-    method: "POST",
-    headers: {
-      Authorization: `Bearer ${TOKEN}`,
-      "Content-Type": "application/json",
-    },
-    body: JSON.stringify({ query }),
-  });
+    steps:
+      - uses: actions/checkout@v3
 
-  const result = await response.json();
-  return result.data.user.repositories.nodes;
-}
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
 
-async function updateReadme() {
-  const repos = await fetchLatestRepos();
-  const readmeTemplate = fs.readFileSync("README-template.md", "utf-8");
+      - name: Install dependencies
+        run: npm install node-fetch@2
 
-  const repoList = repos
-    .map(
-      (repo) =>
-        `- [${repo.name}](${repo.url}): ${repo.description || "No description"}`
-    )
-    .join("\n");
+      - name: Run script
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: node generate-readme.js
 
-  const newReadme = readmeTemplate.replace(
-    /<!--LATEST_REPOS_START-->([\s\S]*?)<!--LATEST_REPOS_END-->/,
-    `<!--LATEST_REPOS_START-->\n${repoList}\n<!--LATEST_REPOS_END-->`
-  );
-
-  fs.writeFileSync("README.md", newReadme);
-}
-
-updateReadme();
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'Sov-Auto-Bot'
+          git config --global user.email 'sovbot@example.com'
+          git add README.md
+          git commit -m "🔄 auto: updated latest repos"
+          git push
