--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,10 +25,13 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: node generate-readme.js
 
-      - name: Commit and push changes
+            - name: Commit and push changes
+        env:
+          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: |
           git config --global user.name 'Sov-Auto-Bot'
           git config --global user.email 'sovbot@example.com'
+          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/Sov-ereign/Sov-ereign.git
           git add README.md
-          git commit -m "🔄 auto: updated latest repos"
-          git push
+          git commit -m "🔄 auto: updated latest repos" || echo "No changes to commit"
+          git push origin main
