--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -25,7 +25,7 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: node generate-readme.js
 
-       - name: Commit and push changes
+      - name: Commit and push changes  # 💡 Fixed indentation here
         env:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: |
