--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -26,12 +26,15 @@ jobs:
         run: node generate-readme.js
 
       - name: Commit and push changes
+        env:
+          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
         run: |
           git config --global user.name 'Sov-Auto-Bot'
           git config --global user.email 'sovbot@example.com'
-          git remote set-url origin https://x-access-token:${{ secrets.PERSONAL_TOKEN }}@github.com/Sov-ereign/Sov-ereign.git
+          
+          # Use PAT to authenticate with HTTPS
+          git remote set-url origin https://Sov-ereign:${{ secrets.PERSONAL_TOKEN }}@github.com/Sov-ereign/Sov-ereign.git
+          
           git add README.md
           git commit -m "🔄 auto: updated latest repos" || echo "No changes to commit"
           git push origin main
-        env:
-          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
